align-content added

--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -708,6 +708,20 @@
                     </ul>
                     </p>
                     <li><b>align-content </b><i></i> (flex-item div grupları arasına mesafe vermek)</li>
+                    <p>
+                    <ul type="circle">
+                        <li>align-content: <b>flex-start </b><i>(satır gruplarını üstten hizalar)</i></li>
+                        <li>align-content: <b>center </b><i>(satır gruplarını ortadan hizalar)</i></li>
+                        <li>align-content: <b>flex-end </b><i>(satır gruplarını alttan hizalar)</i></li>
+                        <li>align-content: <b>stretch </b><i>(satırı olduğu gibi kaplar)</i> (varsayılan)</li>
+                        <li>align-content: <b>space-between </b><i>(satır gruplarının aralarına eşit şekilde mesafe
+                                koyar)</i></li>
+                        <li>align-content: <b>space-around </b><i>(başlangıç satır grubundan önce ve son satır grubundan
+                                sonra x1, satır gruplarının aralarına x2 mesafe bırakarak hizalar)</i></li>
+                        <li>align-content: <b>space-evenly </b><i>(satır gruplarından önce, sonra ve satır gruplarının
+                                aralarına eşit şekilde mesafe bırakarak hizalar)</i></li>
+                    </ul>
+                    </p>
                 </ul>
                 </p>
             </details>
