--- a/CSS/Uygulamalar/20-flexbox/4-align-content.html
+++ b/CSS/Uygulamalar/20-flexbox/4-align-content.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flex-items</title>
+    <title>row-alignments</title>
     <style>
         * {
             margin: 0px;
@@ -17,26 +17,13 @@
             padding: 15px;
             display: flex;
             /*
-            align-self: flex-start
-            align-self: center
-            align-self: flex-end
-            align-self: baseline
-            align-self: stretch
-            */
-
-            /*
-            order: -1
-            order: -2
-            order: 1
-            order: 2
-            */
-
-            /*
-            flex: 0 1 auto / % / px
-            
-            flex-grow: 0, 1, 2...
-            flex-shrink: 0, 1, 2...
-            flex-basis: auto, %, px
+            align-content: flex-start
+            align-content: center
+            align-content: flex-end
+            align-content: stretch
+            align-content: space-between
+            align-content: space-around
+            align-content: space-evenly
             */
         }
 
@@ -56,6 +43,10 @@
         <div class="item">item 2</div>
         <div class="item">item 3</div>
         <div class="item">item 4</div>
+        <div class="item">item 5</div>
+        <div class="item">item 6</div>
+        <div class="item">item 7</div>
+        <div class="item">item 8</div>
     </div>
 </body>
 
