--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -404,6 +404,8 @@
             </details>
             <details Table>
                 <summary><b>Table</b></summary>
+                <br>
+                Tabloya <b>border-radius</b> verilmek istendiğinde, etkin olabilmesi için <b>overflow: hidden</b> da verilmelidir.
                 <p>
                 <ul type="disc">
                     <li><b>table, th, tr, td </b><i>{border: 2px solid #666}</i> (tablo çizgilerini oluşturma)</li>
