--- a/3-JS/script.html
+++ b/3-JS/script.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>script.html</title>
+    
 </head>
 
 <body>
-    <script src="script.js" type="text/Javascript"></script>
     <h2>Javascript'e Giriş</h2>
     <ul>
         <li><b>alert(""); = </b><i>web sayfası mesajı</i></li>
@@ -18,6 +18,7 @@
         <li><b>console.error(""); = </b><i>web tarayıcısı konsolunda hata mesajı göstermek</i></li>
         <li><b>console.clear(); = </b><i>web tarayıcısı konsolunda geçmişi temizler</i></li>
     </ul>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
