--- a/3-JS/script.html
+++ b/3-JS/script.html
@@ -6,19 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>script.html</title>
-    
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <h2>Javascript'e Giriş</h2>
-    <ul>
-        <li><b>alert(""); = </b><i>web sayfası mesajı</i></li>
-        <li><b>console.log(); = </b><i>web tarayıcısı konsolunda log göstermek</i></li>
-        <li><b>console.warn(""); = </b><i>web tarayıcısı konsolunda uyarı mesajı göstermek</i></li>
-        <li><b>console.error(""); = </b><i>web tarayıcısı konsolunda hata mesajı göstermek</i></li>
-        <li><b>console.clear(); = </b><i>web tarayıcısı konsolunda geçmişi temizler</i></li>
-    </ul>
-    <script src="script.js" defer></script>
+    <h1>Javascript Test Alanı</h1>
+    <p>
+    </p>
 </body>
 
 </html>
