--- a/3-JS/script-test.html
+++ b/3-JS/script-test.html
@@ -6,13 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>script.html</title>
-    <script src="script.js" defer></script>
+    <script src="script-test.js" defer></script>
 </head>
 
 <body>
     <h1>Javascript Test Alanı</h1>
-    <p>
-    </p>
 </body>
 
 </html>
